fix alignment of paragraphs within tables

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,6 +15,10 @@ p {
 	text-align: justify;
 }
 
+td.tableblock p {
+	text-align: inherit;
+}
+
 nav {
 	text-align: right;
 }
